--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "auth"
   ],
   "author": "Jeremiah Akpera",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
