--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Jeremiah Akpera",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.8.11",
+    "nconf": "^0.10.0"
   }
 }
