--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Jeremiah Akpera",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "mongoose": "^5.8.11",
-    "nconf": "^0.10.0"
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
