--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "author": "Jeremiah Akpera",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "mongoose": "^5.8.11",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "uniqid": "^5.2.0"
   }
 }
