--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
     "mongoose-unique-validator": "^2.0.3",
+    "ms": "^2.1.2",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "uniqid": "^5.2.0"
   }
 }
