--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "ms": "^2.1.2",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
+    "swagger-jsdoc": "^3.5.0",
+    "swagger-ui-express": "^4.1.3",
     "uniqid": "^5.2.0"
   }
 }
