--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Stand alone auth module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [
     "node",
@@ -27,5 +31,9 @@
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
     "uniqid": "^5.2.0"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0",
+    "supertest": "^4.0.2"
   }
 }
