--- a/config/prodconfig.json
+++ b/config/prodconfig.json
@@ -1,6 +1,6 @@
 {
   "port": 3004,
-  "dbURL": "mongodb://jeremiahakpera:putnam6940@ds333098.mlab.com:33098/jta-auth",
+  "dbURL": "mongodb://jeremiahakpera:putnam6940@ds131676.mlab.com:31676/heroku_xn9tdb27",
   "testdbURL": "mongodb://jeremiahakpera:putnam6940@ds333098.mlab.com:33098/jta-auth-test",
   "tokenSecret": "something.solid",
   "refreshTokenSecret": "somethingserious",
